the customer communication channel is now optional. desktop users have it turned off by default new: automatic cloud backup, optional, disabled by defaul

--- a/html/include/pedalboard.html
+++ b/html/include/pedalboard.html
@@ -8,8 +8,8 @@
     <span class="title">{{title}}</span>
     <span class="actions">
       <span class="js-load open">Open</span>
-      <span class="js-duplicate duplicate">Duplicate</span>
-      <span class="js-remove delete">Delete</span>
+      <span class="js-duplicate duplicate hidden">Duplicate</span>
+      <span class="js-remove delete" style="float:right">Delete</span>
     </span>
   </div>
 </div>
