upgrade waiting message now has a line break, so to fit any screen

--- a/html/css/main.css
+++ b/html/css/main.css
@@ -1325,6 +1325,7 @@ body {
 .screen-disconnected p {
     display:table-cell;
     vertical-align:middle;
+    line-height: 90px;
 }
 
 .plugin-wait {
