layout of plugin description in plugin info window

--- a/html/include/plugin_info.html
+++ b/html/include/plugin_info.html
@@ -21,12 +21,12 @@
                             <button class="js-upgrade btn btn-info btn-mini hidden">Upgrade</button>
                             <button class="js-remove btn btn-danger btn-mini hidden">Remove</button>
                         </p>
-                        <p><a href="http://wiki.portalmod.com/wiki/Plugins/{{package_name}}" target="_blank">More info at <b>{{package_name}}</b>'s wiki page</a></p>
                     </header>
                     <section class="content clearfix">
 		      <p>
-			{{description}}
+			{{{description}}}
 		      </p>
+                      <p><a href="http://wiki.portalmod.com/wiki/Plugins/{{package_name}}" target="_blank">More info at <b>{{package_name}}</b>'s wiki page</a></p>
                       <table class="plugin-specs table table-bordered">
                         <tr>
                           <th>control</th>
