--- a/html/css/dashboard.css
+++ b/html/css/dashboard.css
@@ -633,67 +633,81 @@ svg .connecting-light { fill: none; stroke: #6FF; stroke-width: 1; z-index: 1000
 }
 
 /* SHARE WINDOW */
+.close-window {
+	position: absolute;
+	right: 15px;
+	top: 15px;
+	cursor: pointer;
+}
+
 #share-window .box {
     margin-left: -300px;
     top: 200px;
     width: 600px;
 }
 
-
+#share-window form {
+	margin: 0 !important;
+}
 
 #share-window  #record-rec {
 	border-radius: 50px !important;	
 }
 #share-window span.btn {
-	margin: auto;
 	text-align: center;
 	color: white;
-	font-size: 50px;
+	font-size: 40px;
 	line-height: 50px;
 	padding-top: 25px;
-	margin-bottom: 25px;
+	margin: 10px auto;
 	display: block;
 	width: 75px;
-	height: 75px;
+	height: 70px;
 }
+
+#share-window .form-control {
+	width: 585px;
+}
+
+#share-window .form-control input {
+	width 100%;
+}
+
+#share-window label {
+	width: 585px;
+}
+
 #share-window .record #record-rec.recording {
     background-color: red;
 	border-radius: 50px !important;
 }
-#share-window .record #record-stop {
+
+#share-window .textcenter{
+	width: 300px;
+	margin: auto;
 }
-#share-window .record #record-play {
-    float: left;
-    margin: 0 15px; 
-}
-#share-window .record #record-play.playing {
-    background-color: green
-}
-#share-window .record #record-status {
-    float: left;
-    margin: 0 15px; 
-}
+
 #share-window-fb {
 	border-top: 1px solid #ddd;
-	background: url("../img/facebook-menu-sprite.png") no-repeat top right;
-	margin-top: 25px;
 	display: block;
-	overflow: hidden;
-	height: 36px;
-	line-height: 36px;
-	padding-right: 36px;
-	white-space: nowrap;
+	width: 600px;
+	margin-top: 20px;
+	height: 30px;
+	padding-top: 5px;
 }
+
 #share-window-fb label {
-	width: 400px;
+	background: url("../img/facebook-menu-sprite.png") no-repeat top right;
+	height: 36px;
+	width: 210px;
+	padding-top: 3px;
+	margin-bottom: -6px;
 }
+
 #share-window-fb input {
-	display: inline !important;
-	margin: 0 !important;
+	vertical-align: baseline;
 }
-#share-window-fb p {
-	display: inline !important;
-}
+
 #share-window img.loading {
     height: 66px;
     left: 50%;
@@ -707,20 +721,3 @@ svg .connecting-light { fill: none; stroke: #6FF; stroke-width: 1; z-index: 1000
     border-radius: 5px;
 }
 
-#share-window textarea {
-    height: auto;
-    min-height: 60px;
-    margin-top: 10px;
-    padding: 5px;
-    width: 590px;
-}
-
-#share-window input {
-    border: 1px solid #lightgrey;
-    border-radius: 4px;
-    font-size: 20px;
-    height: 26px;
-    margin-bottom: 10px;
-    padding: 0 5px;
-    width: 588px;
-}
