added fixed height to the sharing/recording interface

--- a/html/css/dashboard.css
+++ b/html/css/dashboard.css
@@ -644,6 +644,7 @@ svg .connecting-light { fill: none; stroke: #6FF; stroke-width: 1; z-index: 1000
     margin-left: -300px;
     top: 200px;
     width: 600px;
+	height: 427px;
 }
 
 #share-window form {
@@ -691,7 +692,8 @@ svg .connecting-light { fill: none; stroke: #6FF; stroke-width: 1; z-index: 1000
 	border-top: 1px solid #ddd;
 	display: block;
 	width: 600px;
-	margin-top: 20px;
+	position: absolute;
+	bottom: 18px;
 	height: 30px;
 	padding-top: 5px;
 }
