--- a/html/include/cloud_feed.html
+++ b/html/include/cloud_feed.html
@@ -11,7 +11,6 @@
                         <img src="{{cloud}}/pedalboard/screenshot/{{_id}}.png" style="background-color:#333;border-radius:4px;height:auto;width:100%;"/>
                     </a>
                   {{/video}}
-		    <a class="js-pedalboard-{{_id}}">Try</a>
                 </p>
                 <div class="techspecs clearfix">
                     <div class="spec clearfix">
@@ -57,6 +56,7 @@
                         </div>
                     </div>
                 </div>
+		<button class="pedalboard-load btn btn-primary js-pedalboard-{{_id}}">Try</button>
                 <div class="description">{{description}}</div>
                 <div class="actions">
                   <!-- <a href="">Like</a> • <a href="">Comment</a> -->
