--- a/html/css/dashboard.css
+++ b/html/css/dashboard.css
@@ -313,16 +313,11 @@
     background-image:url(../img/midi-input-connecting-highlight.png) !important;
 }
 
-.hardware-input .jack-connecting {
+.mod-audio-output .jack-connecting,
+.mod-audio-input .jack-connecting {
     background-image:url(../img/jack-p10.png);
-    background-position:center right;
-    background-repeat:no-repeat;
-    background-size:auto 56px;
-    cursor:pointer;
-    height:18px;
-    position:absolute;
-    width:129px;
-    z-index:100;
+    width:107px !important;
+    margin-left: -23px;
 }
 
 .hardware-input.input-connected {
@@ -343,6 +338,15 @@
     height:45px;
     position:absolute;
     width:81px;
+}
+
+.mod-midi-output .jack-connecting,
+.mod-midi-input .jack-connecting {
+    background-image:url(../img/midi-output-jack.png) !important;
+    width: 83px !important;
+}
+.mod-midi-input .jack-connecting {
+    margin-left: -25px;
 }
 
 .mod-pedal .mod-midi-input .mod-pedal-input-image {
