adding support to lv2 presets in mod-ui

--- a/html/css/pedals.css
+++ b/html/css/pedals.css
@@ -274,6 +274,11 @@ body > .mod-settings {
     padding:0 18px;
 }
 
+.mod-presets {
+    margin:0;
+    padding:0 18px;
+}
+
 /* = KNOB
 ================================================ */
 .mod-pedal-settings .mod-knob {
