adds suport to cpu_load

--- a/html/css/main.css
+++ b/html/css/main.css
@@ -174,8 +174,49 @@ body {
     background-color:#000;
     color:#fff;
 }
+/* MOD - CPU */
+#main-menu #mod-cpu {
+    border-color:#2b2b2b;
+    border-style:solid;
+    border-width:0 0 0 1px;
+    color:rgb(47,47,47);
+    float:right;
+    font-size:11px;
+    font-weight:bold;
+    line-height:4.5;
+    cursor: default;
+    text-align:center;
+    text-transform:uppercase;
+    width:100px;
+}
+#main-menu #mod-cpu .progress{
+    height: 45px;
+    margin-bottom: 0;
+    overflow: hidden;
+background: #1e5799; /* Old browsers */
+background: -moz-linear-gradient(left, #1e5799 0%, #2989d8 69%, #ff6430 78%, #ff6430 93%, #c40000 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, right top, color-stop(0%,#1e5799), color-stop(69%,#2989d8), color-stop(78%,#ff6430), color-s
+background: -webkit-linear-gradient(left, #1e5799 0%,#2989d8 69%,#ff6430 78%,#ff6430 93%,#c40000 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(left, #1e5799 0%,#2989d8 69%,#ff6430 78%,#ff6430 93%,#c40000 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(left, #1e5799 0%,#2989d8 69%,#ff6430 78%,#ff6430 93%,#c40000 100%); /* IE10+ */
+background: linear-gradient(to right, #1e5799 0%,#2989d8 69%,#ff6430 78%,#ff6430 93%,#c40000 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', endColorstr='#c40000',GradientType=1 ); /* IE6-9 */    -webkit
+    -moz-border-radius: 4px;
+    border-radius: 0 !important; */
+}
+    #main-menu #mod-cpu .progress .bar{
+        float: right;
+        background: #222 !important
+    }
 
-
+#main-menu #mod-cpu .progress-title{
+    position: absolute;
+    top: 0;
+    height: 45px;
+    margin: 0;
+    margin-left: 1em;
+    color: white;
+}
 /* MOD - Bluetooth */
 #main-menu #mod-bluetooth {
     background-image:url(../img/menu-icons-sprite.png);
