--- a/html/css/main.css
+++ b/html/css/main.css
@@ -202,7 +202,7 @@ background: -ms-linear-gradient(left, #1e5799 0%,#2989d8 69%,#ff6430 78%,#ff6430
 background: linear-gradient(to right, #1e5799 0%,#2989d8 69%,#ff6430 78%,#ff6430 93%,#c40000 100%); /* W3C */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', endColorstr='#c40000',GradientType=1 ); /* IE6-9 */    -we
     -moz-border-radius: 4px;
-    border-radius: 0 !important; */
+    border-radius: 0 !important;
 }
     #main-menu #mod-cpu .progress .bar{
         float: right;
