--- a/html/css/main.css
+++ b/html/css/main.css
@@ -109,6 +109,17 @@ body {
     background-position:-45px top;
 }
 
+#main-menu #mod-cloud-plugins {
+    background-image:url(../img/menu-icons-sprite.png);
+    background-position:-45px bottom;
+    background-repeat:no-repeat;
+}
+#main-menu #mod-cloud-plugins:hover,
+#main-menu #mod-cloud-plugins.selected {
+    background-color:#000;
+    background-position:-45px top;
+}
+
 /* Pedalboards */
 #main-menu #mod-pedalboard {
     background-image:url(../img/menu-icons-sprite.png);
@@ -796,6 +807,175 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', end
 .plugin-info form.comment-form textarea {
     height:180px;
 }
+
+/* = CLOUD PLUGINS LIBRARY
+================================================ */
+#cloud-plugins-library {
+    background:#000;
+    bottom:46px;
+    left:0;
+    overflow:auto;
+    position:absolute;
+    right:0;
+    top:0;
+    z-index:2;
+}
+#cloud-plugins-library h1 {
+    color:#fff;
+    display:inline-block;
+    font-size:24px;
+    margin:0 0 18px 0;
+    padding:0;
+}
+#cloud-plugins-library header {
+    background-image:url(../img/header-pattern.png);
+    background-position:bottom center;
+    background-repeat:no-repeat;
+    display:block;
+    left:0;
+    padding:10px 10px 18px 10px;
+    position:fixed;
+    right:0;
+    top:0;
+    z-index:2;
+}
+#cloud-plugins-library header .help {
+    background-image:url(../img/icn-help-16x16.png);
+    background-position:center center;
+    background-repeat:no-repeat;
+    display:inline-block;
+    height:21px;
+    width:21px;
+}
+#cloud-plugins-library header .close {
+    opacity:1;
+    position:absolute;
+    right:10px;
+    top:16px;
+}
+#cloud-plugins-library .filter {
+    border-color:#111;
+    border-style:dotted;
+    border-width:0 1px 0 0;
+    bottom:45px;
+    left:10px;
+    padding-top:18px;
+    position:fixed;
+    right:0;
+    top:68px;
+    width:240px;
+}
+#cloud-plugins-library .filter .control-group {
+    float:left;
+    margin-right:9px;
+}
+#cloud-plugins-library .filter .control-group label {
+    color:#fff;
+    display:inline-block;
+    font-size:12px;
+    font-weight:bold;
+    width:165px;
+}
+#cloud-plugins-library .filter .control-group select {
+    width:50px;
+}
+#cloud-plugins-library .cloud-plugins {
+    left:252px;
+    position:absolute;
+    right:10px;
+    top:100px;
+}
+
+#cloud-plugins-library .categories {
+    width: 100%;
+    margin-left: 0px;
+    margin-right: 0px;
+}
+
+#cloud-plugins-library .categories li {
+    display: block;
+    background: #222;
+    color: #888;
+    cursor: pointer;
+    font-size: 12px;
+    font-weight: bold;
+    height: 20px;
+    margin: 0 0 1px 0;
+    padding: 10px 5px;
+    position: relative;
+}
+#cloud-plugins-library .categories li.selected {
+    background: transparent;
+}
+
+#cloud-plugins-library .categories li:hover {
+    background: #333;
+}
+
+#cloud-plugins-library .cloud-plugins .cloud-plugin {
+    color:#fff;
+    float:left;
+    padding: 10px 10px 10px 10px;
+    width:140px;
+    height: 120px;
+    text-align: center;
+}
+#cloud-plugins-library .cloud-plugins .cloud-plugin:hover {
+    background-color: #212121;
+    cursor: pointer;
+}
+
+#cloud-plugins-library .cloud-plugins .cloud-plugin .thumb {
+    height: 70%;
+}
+
+#cloud-plugins-library .cloud-plugins .cloud-plugin .img {
+    background:#2b2b2b;
+    border-radius:4px;
+    display:block;
+    height:154px;
+    margin-bottom:9px;
+    width:100%;
+    height: 80px;
+    overflow: hidden;
+}
+#cloud-plugins-library .cloud-plugins .cloud-plugin .img img {
+    cursor:pointer;
+    height:auto;
+    width:100%;
+}
+#cloud-plugins-library .cloud-plugins .cloud-plugin .title {
+    display:block;
+    height:18px;
+    font-weight:bold;
+    overflow:hidden;
+    position:relative;
+}
+#cloud-plugins-library .cloud-plugins .cloud-plugin .description {
+    display:block;
+    font-size:12px;
+    height:36px;
+    line-height:1.5;
+    overflow:hidden;
+}
+#cloud-plugins-library .cloud-plugins .cloud-plugin .actions {
+    font-size:11px;
+    font-weight:bold;
+    text-transform:uppercase;
+}
+
+#cloud-plugins-library .cloud-plugins .cloud-plugin .actions > span {
+    cursor:pointer;
+}
+
+#cloud-plugins-library .cloud-plugins .cloud-plugin .actions > span:hover {
+    text-decoration:underline;
+}
+
+#cloud-plugins-library .cloud-plugins .cloud-plugin .actions span.duplicate {
+    margin:0 6px;
+}
+
 
 /* = PEDALBOARDS LIBRARY
 ================================================ */
