--- a/html/include/cloud_feed.html
+++ b/html/include/cloud_feed.html
@@ -8,7 +8,7 @@
 		  {{/video}}
                   {{^video}}
                     <a class="js-pedalboard-{{id}}">
-                        <img src="{{cloud}}/api/pedalboard/screenshot/{{id}}.png" style="background-color:#333;border-radius:4px;height:auto;width:100%;"/>
+                        <img src="{{thumbnail_href}}" style="background-color:#333;border-radius:4px;height:auto;width:100%;"/>
                     </a>
                   {{/video}}
                 </p>
