using the new api to get plugin list from cloud

--- a/html/include/cloudplugin.html
+++ b/html/include/cloudplugin.html
@@ -1,6 +1,6 @@
 <div class="cloud-plugin available-plugin js-available-effect" mod-role="available-plugin" mod-plugin-id="{{_id}}">
     <div class="thumb">
-        <img src="{{source}}/effect/image/thumbnail.png?url={{urle}}">
+        <img src="{{thumbnail_href}}">
     </div>
     <div class="description">
         <span class="title">{{label}}</span>
