Sharing pedalboards working, mostly

--- a/html/include/cloud_feed.html
+++ b/html/include/cloud_feed.html
@@ -28,7 +28,7 @@
                         </div>
                     </div>
                     <div class="spec clearfix">
-                        <!-- FIXME icon for MIDI in and out is the same-->
+                        <!-- FIXME icon for MIDI in and out is the same -->
                         <img src="img/cloud/icn-techspecs-midiin.png"/>
                         <div class="number clearfix">
                             <div class="arrow-left"></div>
@@ -36,21 +36,22 @@
                         </div>
                     </div>
                     <div class="spec clearfix">
-                        <!-- FIXME icon for MIDI in and out is the same-->
+                        <!-- FIXME icon for MIDI in and out is the same -->
                         <img src="img/cloud/icn-techspecs-midiin.png"/>
                         <div class="number clearfix">
                             <div class="arrow-left"></div>
                             <span>{{hardware_connections.midi_outputs}}</span>
                         </div>
                     </div>
-                    <!--
                     <div class="spec clearfix">
+                        <!-- FIXME needs proper icon -->
                         <img src="img/cloud/icn-techspecs-rotary.png"/>
                         <div class="number clearfix">
                             <div class="arrow-left"></div>
-                            <span>{{hardware_connections.rotary_addressings}}</span>
+                            <span>{{connections_count}}</span>
                         </div>
                     </div>
+                    <!--
                     <div class="spec clearfix">
                         <img src="img/cloud/icn-techspecs-footswitch.png"/>
                         <div class="number clearfix">
