plugin installation almost working with new cloud API

--- a/html/include/cloudplugin.html
+++ b/html/include/cloudplugin.html
@@ -1,4 +1,4 @@
-<div class="cloud-plugin available-plugin js-available-effect" mod-role="available-plugin" mod-plugin-id="{{_id}}">
+<div class="cloud-plugin available-plugin js-available-effect" mod-role="cloud-plugin" mod-plugin-id="{{id}}">
     <div class="thumb">
         <img src="{{thumbnail_href}}">
     </div>
