Working pedalboard list (new graph format)

--- a/html/include/pedalboard.html
+++ b/html/include/pedalboard.html
@@ -1,7 +1,7 @@
 <div class="pedalboard">
   <div class="img">
     {{#thumbnail}}
-      <img src="{{thumbnail}}?tstamp={{tstamp}}" />
+      <img src="/pedalboards/{{thumbnail}}?tstamp={{tstamp}}" />
     {{/thumbnail}}
   </div>
   <div class="info">
