--- a/html/resources/pedals/default.css
+++ b/html/resources/pedals/default.css
@@ -37,7 +37,7 @@
 /* = FOOTSWITCH
 ================================================ */
 .mod-pedal-default .mod-footswitch {
-    background-image:url(boxy/footswitch.png);
+    background-image:url(footswitch.png);
     background-position:center center;
     background-repeat:no-repeat;
     background-size:auto 65px;
