Less distracting wallpaper; wallpaper is attached to dashboard (moves while dragging)

--- a/html/css/dashboard.css
+++ b/html/css/dashboard.css
@@ -9,6 +9,7 @@
 }
 
 #pedalboard-dashboard {
+    background:#393939 url(../img/background.jpg);
     position: absolute;
     top: 35px;
     left: 0;
